illumination/arins_janky_dll/DLP4710EVM_CY.h

typedef unsigned char UINT8;
typedef unsigned short UINT16;

typedef unsigned char DLP4710EVM_DEVICE_IDENTIFIER;

typedef struct DLP4710EVM {
    CY_HANDLE handle;
    UINT8 dev_id = 0;
    UINT8 channel = 0;
};



typedef enum DLP4710_API_ERROR {
    OK = 0,
    ERROR_USED_HANDLE,
    CY_ERROR,
    ERROR_BUS_ACCESS,
    ERROR_INCOMPLETE_WRITE,
    ERROR_WRITE_FAIL,
    ERROR_INCOMPLETE_READ,
    ERROR_READ_FAIL,
    ERROR_AUTOCONF,
    ERROR_NO_DEVICE,

};

    extern "C" DLP4710EVM_API  void Version(int* a, int* b);


    extern "C" DLP4710EVM_API DLP4710_API_ERROR Open(DLP4710EVM_DEVICE_IDENTIFIER id, DLP4710EVM *DLP);

    extern "C" DLP4710EVM_API DLP4710_API_ERROR Close(DLP4710EVM DLP);

    extern "C" DLP4710EVM_API DLP4710_API_ERROR OpenWithAutoconnect(DLP4710EVM * DLP, char* fnameo);


    extern "C" DLP4710EVM_API DLP4710_API_ERROR WriteOperateMode(DLP4710EVM DLP, UINT8 mode);


    extern "C" DLP4710EVM_API DLP4710_API_ERROR WriteDisplaySize(DLP4710EVM DLP, UINT16 width, UINT16 height);


    extern "C" DLP4710EVM_API DLP4710_API_ERROR WriteExternalVideoSourceFormat(DLP4710EVM DLP, UINT8 frmt);